--- a/core/templates/usuario-productos.html
+++ b/core/templates/usuario-productos.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="productos-container mt-5">
-    <h2 class="titulo text-center mb-4">Ventas</h2>
+    <h2 class="titulo text-center mb-4">PRODUCTOS</h2>
     <div class="row justify-content-center mt-5">
         <div class="col-12 d-flex flex-wrap gap-5 justify-content-center">
 
