--- a/core/static/css/ventana.css
+++ b/core/static/css/ventana.css
@@ -8,7 +8,7 @@
 }
 
 .modal-header {
-    background-color: #ECECEC;
+    background-color: white;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     height: 50%;
@@ -38,7 +38,7 @@
 }
 
 .modal-footer {
-    background-color: #ECECEC;
+    background-color: white;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     height: 50%;
