--- a/core/templates/usuario-servicios.html
+++ b/core/templates/usuario-servicios.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="servicios-container mt-5">
-    <h2 class="titulo text-center mb-4">Servicios de Relojería</h2>
+    <h2 class="titulo text-center mb-4">SERVICIOS</h2>
     <div class="row justify-content-center mt-5">
         <div class="col-12 d-flex flex-wrap gap-4 justify-content-center">
 
